# grok2api

./: .gitignore  LICENSE  README.md  pyproject.toml
src/grok2api/: __init__.py  auth.py  cli.py  config.py  openai_compat.py  server.py  token_store.py  xai_client.py
tests/: test_auth_pkce.py  test_server.py  test_token_store.py  test_xai_client.py
