[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "grok2api"
version = "0.1.0"
description = "Local OpenAI-compatible API proxy for Grok using user-owned xAI OAuth login."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Cd1s" }
]
dependencies = [
  "fastapi>=0.111",
  "httpx>=0.27",
  "platformdirs>=4.2",
  "typer>=0.12",
  "uvicorn[standard]>=0.30"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.5"
]

[project.scripts]
grok2api = "grok2api.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/grok2api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
